# brightmoss-hack

./: .env.example  .gitignore  DESIGN.md  README.md
agent/: pyproject.toml
agent/checkpoint_agent/: __init__.py  config.py  enrichment.py  freshness.py  orchestrator.py  planner.py  repository.py  retrieval.py  schemas.py  server.py  voice_agent.py
agent/tests/: test_config.py  test_freshness.py  test_graph.py  test_memory_api.py  test_memory_enrichments.py  test_providers.py  test_repository.py  test_server.py
demo/: token-notes.md
docs/: ambient-memory-decision.md  architecture.md  build-plan.md  demo-script.md  event-brief.md  interaction-design.md  kol-copilot-reference-audit.md  local-interest-graph-implementation.md  product-spec.md  provider-locality-research.md  setup.md
mac/: Config.example.xcconfig  Package.resolved  Package.swift
mac/Resources/: Info.plist
mac/Sources/CheckpointApp/: AgentClient.swift  AmbientCapturePrivacy.swift  AmbientIntelligence.swift  AppModel.swift  CheckpointApp.swift  ContentView.swift  Models.swift  ProviderCredentials.swift  SafeActionExecutor.swift  VisualTextCapture.swift  VoiceSession.swift  WorkspaceRecorder.swift
mac/Tests/CheckpointAppTests/: AmbientCaptureTests.swift  MemoryLibraryTests.swift  ModelsAndSafetyTests.swift
scripts/: build-mac-app.sh  check-env.sh  run-demo.sh  run-helper.sh  run-mac.sh  run-voice.sh  seed-demo.sh
